Added new email.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		
 		<ul class="social-links">
 			<li title="hitecherik" class="social-github"><a href="http://github.com/hitecherik"><img src="img/github-64.png" alt="GitHub"></a></li>
-			<li title="hitecheriknet [at] icloud.com" class="social-email"><a href="mailto:hitecheriknet@icloud.com"><img src="img/email-64.png" alt="Email"></a></li>
+			<li title="alex [at] hitecherik.net" class="social-email"><a href="mailto:alex@hitecherik.net"><img src="img/email-64.png" alt="Email"></a></li>
 			<li title="@hitecherik" class="social-twitter"><a href="http://twitter.com/hitecherik"><img src="img/twitter-64.png" alt="Twitter"></a></li>
 		</ul>
 		
