--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="main">
 		<h1>Hi. My name's Alex.</h1>
 		
-		<p>I'm an web developer who uses Python and PHP.</p>
+		<p>I'm a web developer who uses Python and PHP.</p>
 		<p class="small">And I play piano, chess and tennis.</p>
 		
 		<hr>
