Long-overdue update.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 	<div class="main">
 		<h1>Hi. My name's Alex.</h1>
 		
-		<p>I'm a web developer who uses Python and PHP.</p>
-		<p class="small">And I play piano, chess and tennis.</p>
+		<!--<p>I'm a web developer who uses Python and PHP.</p>
+		<p class="small">And I play piano, chess and tennis.</p>-->
+
+    <p>I'm a Computing student studying at Imperial College London.</p>
+    <p class="small">Email me at <b>alex [at] hitecherik [dot] net</b>.</p>
 		
 		<hr>
 		
