http -> https for Google Fonts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Alexander Nielsen</title>
 	
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200|Droid+Serif' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200|Droid+Serif' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,10 +13,7 @@
 	<div class="main">
 		<h1>Hi. My name's Alex.</h1>
 		
-		<!--<p>I'm a web developer who uses Python and PHP.</p>
-		<p class="small">And I play piano, chess and tennis.</p>-->
-
-    <p>I'm a Computing student studying at Imperial College London.</p>
+    <p>I'm a Computing student at Imperial College London.</p>
     <p class="small">Email me at <b>alex [at] hitecherik [dot] net</b>.</p>
 		
 		<hr>
@@ -30,12 +27,8 @@
 		<footer>
 			<hr>
 			
-			<p class="small">Copyright &copy; Alexander Nielsen 2015<span id="year"></span>. Licenced under <a href="http://creativecommons.org/licenses/by/4.0/">a CC BY 4.0 licence</a>.</p>
+			<p class="small">Copyright &copy; Alexander Nielsen 2015-2020. Licenced under <a href="http://creativecommons.org/licenses/by/4.0/">a CC BY 4.0 licence</a>.</p>
 		</footer>
 	</div>
-	
-	<script>
-		document.getElementById("year").innerHTML = "-" + (new Date()).getFullYear().toString();
-	</script>
 </body>
 </html>
