--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="main">
 		<h1>Hi. My name's Alex.</h1>
 		
-    <p>I'm a Computing student at Imperial College London.</p>
+    <p>I graduated from Imperial College London in 2021 with a Masters degree in Computing.</p>
     <p class="small">Email me at <b>alex [at] hitecherik [dot] net</b>.</p>
 		
 		<hr>
